--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/philipschenk/02100.io/issues"
   },
-  "homepage": "https://github.com/philipschenk/02100.io"
+  "homepage": "https://github.com/philipschenk/02100.io",
+  "dependencies": {
+    "generate-changelog": "^1.8.0",
+    "husky": "^7.0.2",
+    "prettier": "^2.4.1"
+  }
 }
